[JSC] FTL does not require dlfcn https://bugs.webkit.org/show_bug.cgi?id=173143

Reviewed by Darin Adler.

We no longer use LLVM library. Thus, dlfcn.h is not necessary.
Also, ProcessID is not used in FTLLowerDFGToB3.cpp.

* ftl/FTLLowerDFGToB3.cpp:


Canonical link: https://commits.webkit.org/190013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217995 268f45cc-cd09-0410-ab3c-d52691b4dbfc